@@ -10,5 +10,5 @@ DIST openfoam-wmake-1.4.1_p20080328.patch 577734 RMD160 029ab9b4f316dce127a609bd
 EBUILD openfoam-wmake-1.4.1_p20080328.ebuild 7725 RMD160 29eacda15b1e6a0ca47080d221d8726c12960146 SHA1 962e6bafbf734dde8425fbc77c379c572b051b18 SHA256 f96f98c960ed7db9c40fbac1f5bdedafdb3974d5da77d2a010e17e79f90abe78
 EBUILD openfoam-wmake-1.4.1_p20080827.ebuild 7673 RMD160 f7ddbf33b14268891d8eed1623bbac87a51dde62 SHA1 c099acd64d76f1c7705473d261eeac7b65e82220 SHA256 5bb10bd44a28412a98f8bf592ea44ae021a5b707371ab35b81889f22267953a2
 EBUILD openfoam-wmake-1.5.ebuild 2561 RMD160 6ea16a1bb20cbaa1b7e3c8f328d894c4e1e23396 SHA1 d16cb542224a642bff14b2641cfb8ca2932d0871 SHA256 5803c3b534c2a9b7c84dae5e1bfb728b1b09b70a14d2cfa272ee5a8c143a9d2d
-MISC ChangeLog 2092 RMD160 5d5ed6b031ac5de907c476322b548a48fe2167ef SHA1 caecb2c593177e0899ead8bf7402fda38deeb361 SHA256 1457e4a20d0cde2be1b4375170d880e834113ade0a4aeb8039981e2680567f43
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+MISC ChangeLog 2213 RMD160 5469add1d3ea05b162a9159da22ddc3c23d56c7a SHA1 bc284dcbd9353a60f854a03178c6c89f9e19260a SHA256 b1c243faef7e50b72b508ec138381a85bc514bf03db0c834d15e97e1f8358cdb
+MISC metadata.xml 342 RMD160 ddf80db3f4299d93a7d725d1011f66c82226ca13 SHA1 b10a61cbca2c608ab8b73d43d982c21857133bdb SHA256 4d024224740d1d491d9ba577e6c1c66104ec5a91b09dea0e6f37fd647502321f
