@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> metadata.xml:
+  Add local useflags to metadata.xml (GLEP 56)
+
   28 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de>
   +openfoam-wmake-1.4.1_p20080827.ebuild,
   +files/openfoam-wmake-paraFoam-1.4.1_p20080827.patch,
